2007-12-30	Guido Diepen	<guido@guidodiepen.nl>

	* Implemented use of tray icon. Currently only showing connection
	  status by means of the icon color. Will be minimize-to-tray
	* Implemented message balloons indicating connection status change
	* Implemented the possibility of installing CAB files through 
	  the application
	* Important note is that almost none to none checking is done!!
	  This program is still in heavy development
	* Added some new items to TODO

2007-12-29	Guido Diepen	<guido@jcwodan.nl>

	* Finished updating directory structure, program will start
	  again if fetched from SVN

2007-12-28	Guido Diepen	<guido@jcwodan.nl>

	* SynCE-KDM project renamed to SynCE-KPM. The problem is
	  that the KDM part could easily be confused with the 
	  KDE Desktop Manager. The name is now
	  SynCE KDE PDA Manager  (SynCE-KPM)
	* Changes in directory structure to make packaging easier later on

2007-12-20	Guido Diepen	<guido@jcwodan.nl>

	* SynCE-KDM now makes use of DBus to get information about 
	  connected phone. Furthermore the DBus information is also
	  used to find out if odccm is running and when devices
	  are connected/disconnected
	* Included CeDevice class, copied from synce-gnome application
	* Made the PhoneCommunicator class Observable. Other classes
	  can add a listener with a callback that will be called as
	  soon as the state of the phone changes.

2007-12-19	Guido Diepen	<guido@jcwodan.nl>

	* Before operations, the checks whether there still is a connection
	* Added an initial communcation class for handling the communcation
	  with the device
	* Added possibility of uninstalling programs from the device

2007-12-18	Guido Diepen	<guido@jcwodan.nl>

	* Initial version